--- a/MovieExplorer.Droid/Resources/layout/Main.axml
+++ b/MovieExplorer.Droid/Resources/layout/Main.axml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-<Button  
-    android:id="@+id/MyButton"
-    android:layout_width="match_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/Hello"
-    />
+    android:layout_height="match_parent">
+
+  <TextView android:text="Top Rated"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+  <cheesebaron.horizontallistview.HorizontalListView android:id="@+id/top_rated_list"
+                                                     android:layout_width="fill_parent"
+                                                     android:layout_height="200dp"
+                                                     Background="#ffb900" />
+  
+  <Button
+      android:id="@+id/MyButton"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/Hello"
+      local:MvxBind="Click ReloadCommand" />
 </LinearLayout>
