--- a/MovieExplorer.Droid/Resources/layout/MovieView.axml
+++ b/MovieExplorer.Droid/Resources/layout/MovieView.axml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="140dp"
-    android:layout_height="match_parent">
-  <ImageView
-    android:id="@+id/image1"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:src="@drawable/Icon" />
+    android:layout_width="154dp"
+    android:layout_height="231dp">
+    <ImageView
+        android:id="@+id/poster_image"
+        android:layout_width="154dp"
+        android:layout_height="231dp"
+        android:paddingLeft="10dp"
+        android:cropToPadding="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/Icon" />
 </LinearLayout>
