--- a/MovieExplorer.Droid/Resources/layout/Detail.axml
+++ b/MovieExplorer.Droid/Resources/layout/Detail.axml
@@ -1,13 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
   <include
-        android:id="@+id/toolbar"
-        layout="@layout/Toolbar" />
-  <TextView
-      android:text="Detail :D"
-      android:layout_width="fill_parent"
-      android:layout_height="wrap_content" />
+      android:id="@+id/toolbar"
+      layout="@layout/Toolbar" />
+  <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="10dp"
+        local:MvxBind="Visible InverseShowLoader">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical">
+      <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/detail_poster_image"
+            android:layout_width="154dp"
+            android:layout_height="231dp"
+            android:padding="10dp"
+            android:cropToPadding="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/placeholder" />
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:padding="10dp">
+          <TextView
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:textColor="@color/text_color"
+              android:textSize="16dp"
+              android:textStyle="bold"
+              local:MvxBind="Text Movie.Title" />
+          <TextView
+              android:layout_width="fill_parent"
+              android:layout_height="wrap_content"
+              android:textColor="@color/text_color"
+              local:MvxBind="Text Movie.ReleaseDate, Converter=StringDateConverter, ConverterParameter='Release Data: {0}'" />
+        </LinearLayout>
+      </LinearLayout>
+
+      <TextView
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:textColor="@color/text_color"
+          android:padding="10dp"
+          local:MvxBind="Text Movie.Overview" />
+
+      <LinearLayout
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          android:orientation="vertical"
+          android:layout_alignParentBottom="true">
+        <TextView
+            android:text="Similar Movies"
+            android:textColor="@color/section_label_color"
+            android:textStyle="bold"
+            android:paddingLeft="10dp"
+            android:paddingTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <cheesebaron.horizontallistview.HorizontalListView
+            android:id="@+id/similar_list"
+            android:layout_width="fill_parent"
+            android:layout_height="138dp"
+            Background="#ffb900" />
+      </LinearLayout>
+    </LinearLayout>
+  </ScrollView>
 </LinearLayout>
