--- a/MovieExplorer.Droid/Resources/layout/Toolbar.axml
+++ b/MovieExplorer.Droid/Resources/layout/Toolbar.axml
@@ -17,6 +17,7 @@
             android:layout_gravity="center"
             android:gravity="center_vertical"
             android:text="@string/ApplicationName"
+            android:textSize="16dp"
             android:textStyle="bold"
             android:textColor="@color/toolbar_font_color" />
     
