- Did more on detail page - Added uri service to dispatch youtube videos to native app or browser. - Added toast service to show errors when there is no video.

--- a/MovieExplorer.Droid/Resources/layout/Main.axml
+++ b/MovieExplorer.Droid/Resources/layout/Main.axml
@@ -4,63 +4,70 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/Toolbar" />
-    <ProgressBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:indeterminateOnly="true"
-        android:layout_gravity="center"
-        local:MvxBind="Visible ShowLoader"
-        style="?android:attr/progressBarStyleSmall" />
-    <ScrollView
+  <include
+      android:id="@+id/toolbar"
+      layout="@layout/Toolbar" />
+  <ProgressBar
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:indeterminateOnly="true"
+      android:layout_gravity="center"
+      local:MvxBind="Visible ShowLoader"
+      style="?android:attr/progressBarStyleLarge" />
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      local:MvxBind="Visible InverseShowLoader">
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="10dp"
-        local:MvxBind="Visible InverseShowLoader">
-        <LinearLayout
-            android:orientation="vertical"
+        android:layout_height="match_parent">
+      <TextView
+          android:text="Top Rated"
+          android:textColor="@color/section_label_color"
+          android:textStyle="bold"
+          android:textSize="16dp"
+          android:paddingLeft="10dp"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content" />
+      <cheesebaron.horizontallistview.HorizontalListView
+          android:id="@+id/top_rated_list"
+          android:layout_width="fill_parent"
+          android:layout_height="231dp" />
+      <TextView
+          android:text="Popular"
+          android:textColor="@color/section_label_color"
+          android:textStyle="bold"
+          android:textSize="16dp"
+          android:paddingLeft="10dp"
+          android:paddingTop="10dp"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content" />
+      <cheesebaron.horizontallistview.HorizontalListView
+          android:id="@+id/popular_list"
+          android:layout_width="fill_parent"
+          android:layout_height="231dp" />
+      <TextView
+          android:text="Now Playing"
+          android:textColor="@color/section_label_color"
+          android:textStyle="bold"
+          android:textSize="16dp"
+          android:paddingLeft="10dp"
+          android:paddingTop="10dp"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content" />
+      <cheesebaron.horizontallistview.HorizontalListView
+          android:id="@+id/now_playing_list"
+          android:layout_width="fill_parent"
+          android:layout_height="231dp" />
+
+      <Button
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:text="Top Rated"
-                android:textColor="@color/section_label_color"
-                android:textStyle="bold"
-                android:paddingLeft="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <cheesebaron.horizontallistview.HorizontalListView
-                android:id="@+id/top_rated_list"
-                android:layout_width="fill_parent"
-                android:layout_height="231dp"
-                Background="#ffb900" />
-            <TextView
-                android:text="Popular"
-                android:textColor="@color/section_label_color"
-                android:textStyle="bold"
-                android:paddingLeft="10dp"
-                android:paddingTop="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <cheesebaron.horizontallistview.HorizontalListView
-                android:id="@+id/popular_list"
-                android:layout_width="fill_parent"
-                android:layout_height="231dp"
-                Background="#ffb900" />
-            <TextView
-                android:text="Now Playing"
-                android:textColor="@color/section_label_color"
-                android:textStyle="bold"
-                android:paddingLeft="10dp"
-                android:paddingTop="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-            <cheesebaron.horizontallistview.HorizontalListView
-                android:id="@+id/now_playing_list"
-                android:layout_width="fill_parent"
-                android:layout_height="231dp"
-                Background="#ffb900" />
-        </LinearLayout>
-    </ScrollView>
+            android:layout_height="wrap_content"
+            android:text="Reload"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            local:MvxBind="Click ReloadCommand" />
+    </LinearLayout>
+  </ScrollView>
 </LinearLayout>
