--- a/MovieExplorer.Droid/Resources/layout/Detail.axml
+++ b/MovieExplorer.Droid/Resources/layout/Detail.axml
@@ -7,14 +7,20 @@
   <include
       android:id="@+id/toolbar"
       layout="@layout/Toolbar" />
+  <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateOnly="true"
+        android:layout_gravity="center"
+        local:MvxBind="Visible ShowLoader"
+        style="?android:attr/progressBarStyleLarge" />
   <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="10dp"
-        local:MvxBind="Visible InverseShowLoader">
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      local:MvxBind="Visible InverseShowLoader">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
@@ -45,34 +51,59 @@
               android:layout_height="wrap_content"
               android:textColor="@color/text_color"
               local:MvxBind="Text Movie.ReleaseDate, Converter=StringDateConverter, ConverterParameter='Release Data: {0}'" />
+          <LinearLayout
+              android:layout_width="fill_parent"
+              android:layout_height="0dip"
+              android:orientation="vertical"
+              android:layout_weight="1"
+              android:gravity="bottom">
+            <Button
+                android:layout_width="100dp"
+                android:layout_height="30dp"
+                android:layout_gravity="bottom"
+                android:text="Play Video"
+                android:textColor="#ffffff"
+                android:background="#a3ca19"
+                local:MvxBind="Click PlayVideoCommand" />
+            <Button
+                android:layout_width="150dp"
+                android:layout_height="30dp"
+                android:layout_gravity="bottom"
+                android:text="Save to Favorites"
+                android:textColor="#ffffff"
+                android:background="#dbb001"
+                android:layout_marginTop="10dp"
+                local:MvxBind="Click SaveToFavoritesCommand" />
+          </LinearLayout>
         </LinearLayout>
       </LinearLayout>
-
       <TextView
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:textColor="@color/text_color"
           android:padding="10dp"
           local:MvxBind="Text Movie.Overview" />
-
       <LinearLayout
           android:layout_width="fill_parent"
-          android:layout_height="wrap_content"
+          android:layout_height="0dip"
           android:orientation="vertical"
-          android:layout_alignParentBottom="true">
+          android:layout_weight="1"
+          android:paddingBottom="10dp"
+          android:gravity="bottom">
         <TextView
             android:text="Similar Movies"
             android:textColor="@color/section_label_color"
             android:textStyle="bold"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
+            android:layout_gravity="bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <cheesebaron.horizontallistview.HorizontalListView
             android:id="@+id/similar_list"
             android:layout_width="fill_parent"
             android:layout_height="138dp"
-            Background="#ffb900" />
+            android:layout_gravity="bottom" />
       </LinearLayout>
     </LinearLayout>
   </ScrollView>
