--- a/MovieExplorer.Droid/Resources/layout/SmallMovieView.axml
+++ b/MovieExplorer.Droid/Resources/layout/SmallMovieView.axml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="154dp"
-    android:layout_height="231dp">
-    <ImageView
-        android:id="@+id/poster_image"
-        android:layout_width="92dp"
-        android:layout_height="138dp"
-        android:paddingLeft="10dp"
-        android:cropToPadding="true"
-        android:scaleType="centerCrop"
-        android:src="@drawable/placeholder" />
+              android:orientation="vertical"
+              android:layout_width="92dp"
+              android:layout_height="138dp"
+              android:gravity="bottom"
+              android:layout_gravity="bottom">
+  <ImageView
+      android:id="@+id/poster_image"
+      android:layout_width="92dp"
+      android:layout_height="138dp"
+      android:layout_gravity="bottom"
+      android:paddingLeft="10dp"
+      android:cropToPadding="true"
+      android:scaleType="centerCrop"
+      android:src="@drawable/placeholder" />
 </LinearLayout>
