--- a/MovieExplorer.Droid/Resources/layout/Detail.axml
+++ b/MovieExplorer.Droid/Resources/layout/Detail.axml
@@ -94,6 +94,7 @@
                                 android:background="#a3ca19"
                                 local:MvxBind="Click PlayVideoCommand" />
                             <Button
+                                android:id="@+id/favorite_button"
                                 android:layout_width="wrap_content"
                                 android:layout_height="30dp"
                                 android:singleLine="true"
@@ -103,7 +104,7 @@
                                 android:textColor="#ffffff"
                                 android:background="#dbb001"
                                 android:layout_marginTop="10dp"
-                                local:MvxBind="Click AddToWatchlistCommand; Text WatchlistButtonText" />
+                                local:MvxBind="Click AddToFavoritesCommand; Text FavoritesButtonText" />
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
