- Quick layout fix

--- a/MovieExplorer.Droid/Resources/layout/Main.axml
+++ b/MovieExplorer.Droid/Resources/layout/Main.axml
@@ -75,7 +75,8 @@
         <cheesebaron.horizontallistview.HorizontalListView
             android:id="@+id/now_playing_list"
             android:layout_width="fill_parent"
-            android:layout_height="231dp" />
+            android:layout_height="231dp"
+            android:paddingBottom="10dp" />
       </LinearLayout>
     </ScrollView>
   </android.support.v4.widget.SwipeRefreshLayout>
